third_party/blink/renderer/platform/transforms/transformation_matrix.cc
@@ -1713,10 +1713,27 @@ static inline void BlendFloat(double& from, double to, double progress) {
     from = from + (to - from) * progress;
 }
 
+bool TransformationMatrix::Is2dTransform() const {
+  if (!IsFlat())
+    return false;
+
+  // Check perspective.
+  if (matrix_[0][3] != 0 || matrix_[1][3] != 0 || matrix_[2][3] != 0 ||
+      matrix_[3][3] != 1)
+    return false;
+
+  return true;
+}
+
 void TransformationMatrix::Blend(const TransformationMatrix& from,
                                  double progress) {
   if (from.IsIdentity() && IsIdentity())
     return;
+
+  if (from.Is2dTransform() && Is2dTransform()) {
+    Blend2D(from, progress);
+    return;
+  }
 
   // decompose
   DecomposedType from_decomp;
@@ -1748,6 +1765,40 @@ void TransformationMatrix::Blend(const TransformationMatrix& from,
   Recompose(from_decomp);
 }
 
+void TransformationMatrix::Blend2D(const TransformationMatrix& from,
+                                   double progress) {
+  // Decompose into scale, rotate, translate and skew transforms.
+  Decomposed2dType from_decomp;
+  Decomposed2dType to_decomp;
+  if (!from.Decompose2D(from_decomp) || !Decompose2D(to_decomp)) {
+    if (progress < 0.5)
+      *this = from;
+    return;
+  }
+
+  // Take the shorter of the clockwise or counter-clockwise paths.
+  double rotation = abs(from_decomp.angle - to_decomp.angle);
+  DCHECK(rotation < 2 * M_PI);
+  if (rotation > M_PI) {
+    if (from_decomp.angle > to_decomp.angle) {
+      from_decomp.angle -= 2 * M_PI;
+    } else {
+      to_decomp.angle -= 2 * M_PI;
+    }
+  }
+
+  // Interpolate.
+  BlendFloat(from_decomp.scale_x, to_decomp.scale_x, progress);
+  BlendFloat(from_decomp.scale_y, to_decomp.scale_y, progress);
+  BlendFloat(from_decomp.skew_xy, to_decomp.skew_xy, progress);
+  BlendFloat(from_decomp.translate_x, to_decomp.translate_x, progress);
+  BlendFloat(from_decomp.translate_y, to_decomp.translate_y, progress);
+  BlendFloat(from_decomp.angle, to_decomp.angle, progress);
+
+  // Recompose.
+  Recompose2D(from_decomp);
+}
+
 bool TransformationMatrix::Decompose(DecomposedType& decomp) const {
   if (IsIdentity()) {
     memset(&decomp, 0, sizeof(decomp));
@@ -1759,6 +1810,100 @@ bool TransformationMatrix::Decompose(DecomposedType& decomp) const {
 
   if (!blink::Decompose(matrix_, decomp))
     return false;
+  return true;
+}
+
+// Decompose a 2D transformation matrix of the form:
+// [m11 m21 0 m41]
+// [m12 m22 0 m42]
+// [ 0   0  1  0 ]
+// [ 0   0  0  1 ]
+//
+// The decomposition is of the form:
+// M = translate * rotate * skew * scale
+//     [1 0 0 Tx] [cos(R) -sin(R) 0 0] [1 K 0 0] [Sx 0  0 0]
+//   = [0 1 0 Ty] [sin(R)  cos(R) 0 0] [0 1 0 0] [0  Sy 0 0]
+//     [0 0 1 0 ] [  0       0    1 0] [0 0 1 0] [0  0  1 0]
+//     [0 0 0 1 ] [  0       0    0 1] [0 0 0 1] [0  0  0 1]
+//
+bool TransformationMatrix::Decompose2D(Decomposed2dType& decomp) const {
+  if (!Is2dTransform()) {
+    LOG(ERROR) << "2-D decomposition cannot be performed on a 3-D transform.";
+    return false;
+  }
+
+  double m11 = matrix_[0][0];
+  double m21 = matrix_[1][0];
+  double m12 = matrix_[0][1];
+  double m22 = matrix_[1][1];
+
+  double determinant = m11 * m22 - m12 * m21;
+  // Test for matrix being singular.
+  if (determinant == 0) {
+    return false;
+  }
+
+  // Translation transform.
+  // [m11 m21 0 m41]    [1 0 0 Tx] [m11 m21 0 0]
+  // [m12 m22 0 m42]  = [0 1 0 Ty] [m12 m22 0 0]
+  // [ 0   0  1  0 ]    [0 0 1 0 ] [ 0   0  1 0]
+  // [ 0   0  0  1 ]    [0 0 0 1 ] [ 0   0  0 1]
+  decomp.translate_x = matrix_[3][0];
+  decomp.translate_y = matrix_[3][1];
+
+  // For the remainder of the decomposition process, we can focus on the upper
+  // 2x2 submatrix
+  // [m11 m21] = [cos(R) -sin(R)] [1 K] [Sx 0 ]
+  // [m12 m22]   [sin(R)  cos(R)] [0 1] [0  Sy]
+  //           = [Sx*cos(R) Sy*(K*cos(R) - sin(R))]
+  //             [Sx*sin(R) Sy*(K*sin(R) + cos(R))]
+
+  // Determine sign of the x and y scale.
+  decomp.scale_x = 1;
+  decomp.scale_y = 1;
+  if (determinant < 0) {
+    // If the determinant is negative, we need to flip either the x or y scale.
+    // Flipping both is equivalent to rotating by 180 degrees.
+    // Flip the axis with the minimum unit vector dot product.
+    if (m11 < m22) {
+      decomp.scale_x = -decomp.scale_x;
+    } else {
+      decomp.scale_y = -decomp.scale_y;
+    }
+  }
+
+  // X Scale.
+  // m11^2 + m12^2 = Sx^2*(cos^2(R) + sin^2(R)) = Sx^2.
+  // Sx = +/-sqrt(m11^2 + m22^2)
+  decomp.scale_x *= sqrt(m11 * m11 + m12 * m12);
+  m11 /= decomp.scale_x;
+  m12 /= decomp.scale_x;
+
+  // Post normalization, the submatrix is now of the form:
+  // [m11 m21] = [cos(R)  Sy*(K*cos(R) - sin(R))]
+  // [m12 m22]   [sin(R)  Sy*(K*sin(R) + cos(R))]
+
+  // XY Shear.
+  // m11 * m21 + m12 * m22 = Sy*K*cos^2(R) - Sy*sin(R)*cos(R) +
+  //                         Sy*K*sin^2(R) + Sy*cos(R)*sin(R)
+  //                       = Sy*K
+  double scaledShear = m11 * m21 + m12 * m22;
+  m21 -= m11 * scaledShear;
+  m22 -= m12 * scaledShear;
+
+  // Post normalization, the submatrix is now of the form:
+  // [m11 m21] = [cos(R)  -Sy*sin(R)]
+  // [m12 m22]   [sin(R)   Sy*cos(R)]
+
+  // Y Scale.
+  // Similar process to determining x-scale.
+  decomp.scale_y *= sqrt(m21 * m21 + m22 * m22);
+  m21 /= decomp.scale_y;
+  m22 /= decomp.scale_y;
+  decomp.skew_xy = scaledShear / decomp.scale_y;
+
+  // Rotation transform.
+  decomp.angle = atan2(m12, m11);
   return true;
 }
 
@@ -1814,6 +1959,32 @@ void TransformationMatrix::Recompose(const DecomposedType& decomp) {
 
   // finally, apply scale
   Scale3d(decomp.scale_x, decomp.scale_y, decomp.scale_z);
+}
+
+void TransformationMatrix::Recompose2D(const Decomposed2dType& decomp) {
+  MakeIdentity();
+
+  // Translate transform.
+  SetM41(decomp.translate_x);
+  SetM42(decomp.translate_y);
+
+  // Rotate transform.
+  double cosAngle = cos(decomp.angle);
+  double sinAngle = sin(decomp.angle);
+  SetM11(cosAngle);
+  SetM21(-sinAngle);
+  SetM12(sinAngle);
+  SetM22(cosAngle);
+
+  // skew transform.
+  if (decomp.skew_xy) {
+    TransformationMatrix skewTransform;
+    skewTransform.SetM21(decomp.skew_xy);
+    Multiply(skewTransform);
+  }
+
+  // Scale transform.
+  Scale3d(decomp.scale_x, decomp.scale_y, 1);
 }
 
 bool TransformationMatrix::IsIntegerTranslation() const {
